--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<sonar.projectKey>vra6a_ivt-lab</sonar.projectKey>
+		<sonar.organization>vra6a</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<dependencies>
